--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
     - name: Install Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
+
     - name: Install npm dependencies
       run: npm install
+
     - name: Run build task
       run: npm run build --if-present
+
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
-        password: ${{ secrets.SERVER_SSH_KEY }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
         port: 22
         script: whoami
