--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,11 @@ jobs:
       run: npm run build --if-present
 
     - name: Deploy to Server
-      uses: appleboy/ssh-action@master
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: 22
-        script: whoami
+        source: "dist/"
+        target: "/var/www/html"
