--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
         DB_USERNAME: ${{ secrets.DB_USERNAME }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         # DB_NAME: ${{ secrets.DB_NAME }}
-      run: db-migrate up -e prod
+      run: db-migrate up -e production
