remove migrations deploy, not working

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,9 @@ jobs:
         source: "dist/*"
         target: "/var/www/html"
 
-    - name: Run Migrations
-      env:
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        # DB_NAME: ${{ secrets.DB_NAME }}
-      run: db-migrate up -e production
+    # - name: Run Migrations
+    #   env:
+    #     DB_USERNAME: ${{ secrets.DB_USERNAME }}
+    #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+    #     # DB_NAME: ${{ secrets.DB_NAME }}
+    #   run: db-migrate up -e production
