--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,16 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
+    # - name: Install Node.js
+    #   uses: actions/setup-node@v1
+    #   with:
+    #     node-version: '10.x'
 
-    - name: Install npm dependencies
-      run: npm install -g db-migrate && npm install
+    # - name: Install npm dependencies
+    #   run: npm install -g db-migrate && npm install
 
-    - name: Run build task
-      run: npm run build --if-present
+    # - name: Run build task
+    #   run: npm run build --if-present
 
     - name: Deploy to Server
       uses: appleboy/scp-action@master
